--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,3 @@
-p.intro {
-  font-style: italic;
-  font-weight: bolder;
-}
-h2.intro {
-  font-size: larger;
-}
-img.intro {
-  width: 300px;
+.Intro {
+  font-family: Arial, Helvetica, sans-serif;
 }
